--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       POSTGRES_PASSWORD: password
       POSTGRES_USER: prisma
+      POSTGRES_DB: mydb
     ports:
       - 5432:5432
     volumes:
