--- a/quizzeo/.env
+++ b/quizzeo/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://primsa:password@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://prisma:password@127.0.0.1:5432/mydb"
