--- a/quizzeo/.env
+++ b/quizzeo/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://prisma:password@127.0.0.1:5432/mydb"
+SALT="secret"
