--- a/quizzeo/package.json
+++ b/quizzeo/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "prisma": "^5.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
