--- a/quizzeo/package.json
+++ b/quizzeo/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "quizzeo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.13.0",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "next": "14.2.3",
-    "prisma": "^5.13.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
-    "react-query": "^3.39.3"
-  },
-  "devDependencies": {
-    "@types/node": "20.12.7",
-    "@types/react": "18.3.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.4.5"
-  }
+    "name": "quizzeo",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "seed": "node prisma/seed.js"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.13.0",
+        "bcrypt": "^5.1.1",
+        "jsonwebtoken": "^9.0.2",
+        "next": "14.2.3",
+        "prisma": "^5.13.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.3",
+        "react-query": "^3.39.3"
+    },
+    "devDependencies": {
+        "@types/node": "20.12.7",
+        "@types/react": "18.3.1",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "5.4.5"
+    }
 }
