--- a/quizzeo/package.json
+++ b/quizzeo/package.json
@@ -18,7 +18,8 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.3",
-        "react-query": "^3.39.3"
+        "react-query": "^3.39.3",
+        "react-spinners": "^0.13.8"
     },
     "devDependencies": {
         "@types/node": "20.12.7",
