--- a/quizzeo/.env
+++ b/quizzeo/.env
@@ -6,4 +6,5 @@
 
 DATABASE_URL="postgresql://prisma:password@127.0.0.1:5432/mydb"
 SALT="secret"
-PASSWOARD_SALT="10"
+PASSWORD_SALT="10"
+NEXT_PUBLIC_API_URL="http://localhost:3000/api/"
