--- a/quizzeo/package.json
+++ b/quizzeo/package.json
@@ -5,13 +5,15 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
+        "start": "npm run seed && next start",
         "lint": "next lint",
         "seed": "node prisma/seed.js"
     },
     "dependencies": {
         "@prisma/client": "^5.13.0",
-        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
+        "crypto-js": "^4.2.0",
+        "jose": "^5.2.4",
         "jsonwebtoken": "^9.0.2",
         "next": "14.2.3",
         "prisma": "^5.13.0",
@@ -22,6 +24,7 @@
         "react-spinners": "^0.13.8"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/node": "20.12.7",
         "@types/react": "18.3.1",
         "postcss": "^8",
