--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,5 @@
 version: '3.1'
 services: 
-  app: 
-    build:
-      context: quizzeo
-      args:
-        - DATABASE_URL=postgresql://prisma:password@db:5432/mydb
-        - SALT=secret
-        - PASSWORD_SALT=10
-        - NEXT_PUBLIC_API_URL=http://localhost/api/
-    ports:
-      - 80:3000
-    networks:
-      - dbnetwork
   db:
     image: postgres
     restart: always
@@ -23,6 +11,20 @@ services:
       - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - dbnetwork
+  app: 
+    build:
+      context: quizzeo
+      args:
+        - DATABASE_URL=postgresql://prisma:password@db:5432/mydb
+        - SALT=secret
+        - PASSWORD_SALT=10
+        - NEXT_PUBLIC_API_URL=http://localhost/api/
+    depends_on:
+      - db
+    ports:
+      - 80:3000
     networks:
       - dbnetwork
 
