fix mistake on deploy

--- a/quizzeo/package.json
+++ b/quizzeo/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "npm run seed && next start",
+        "start": "npx prisma migrate deploy && npm run seed && next start",
         "lint": "next lint",
         "seed": "node prisma/seed.js"
     },
