--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         - DATABASE_URL=postgresql://prisma:password@db:5432/mydb
         - SALT=secret
         - PASSWORD_SALT=10
-        - NEXT_PUBLIC_API_URL=http://localhost/api/
+        - NEXT_PUBLIC_API_URL=${API_URL:-http://localhost/api/}
     depends_on:
       - db
     ports:
