--- a/quizzeo/package.json
+++ b/quizzeo/package.json
@@ -21,7 +21,8 @@
         "react-dom": "^18",
         "react-hook-form": "^7.51.3",
         "react-query": "^3.39.3",
-        "react-spinners": "^0.13.8"
+        "react-spinners": "^0.13.8",
+        "request-ip": "^3.3.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
